--- a/index.html/index.html
+++ b/index.html/index.html
@@ -52,6 +52,24 @@
           <img src="../Flower Asset/pngwing 7.png" alt="" />
           <a href="#">Pink Flower Tree</a>
         </div>
+      </div>
+    </section>
+
+    <section class="container">
+      <div class="cards">
+        <div>
+          <img src="../Flower Asset/Group 57.png" alt="" />
+          <p>Same Day Delivery. Click & Collect.</p>
+        </div>
+        <div>
+          <img src="../Flower Asset/Group 58.png" alt="" />
+          <p>Fresh Flowers. Local Growers.</p>
+        </div>
+        <div>
+          <img src="../Flower Asset/Group 59.png" alt="" />
+          <p>24/7 Free Support.</p>
+        </div>
+      </div>
     </section>
   </body>
 </html>
