--- a/index.html/index.html
+++ b/index.html/index.html
@@ -71,5 +71,23 @@
         </div>
       </div>
     </section>
+
+    <!-- hot deals sections  -->
+    <section>
+      <div class="content">
+        <div class="left-content">
+          <h1 class="title">Hot Deal ! Sale Up To 25% <span>Off</span></h1>
+          <p class="sub-title">
+            It is a long established fact that a reader will be distracted by
+            the readable <br />
+            content of a page when looking at its layout.
+          </p>
+          <button class="primary-btn">Sign Up</button>
+        </div>
+        <div class="right-content">
+          <img src="/Flower Asset/pngwing 8.png" alt="" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
