added latest deals section

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -89,5 +89,42 @@
         </div>
       </div>
     </section>
+
+    <!-- instragram section -->
+    <section class="featured">
+      <h1 class="title">Instagram</h1>
+      <p class="sub-title">
+        It is a long established fact that a reader will be distracted by the
+        readable <br />content of a page when looking at its layout.
+      </p>
+      <div class="card_container">
+        <div>
+          <img src="../Flower Asset/Flower 01.png" alt="" />
+        </div>
+        <div>
+          <img src="../Flower Asset/Rectangle 4.png" alt="" />
+        </div>
+        <div>
+          <img src="../Flower Asset/Rectangle 5.png" alt="" />
+        </div>
+        <div>
+          <img src="../Flower Asset/Rectangle 6.png" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <!-- latest deals section -->
+    <section class="latest">
+      <h1 class="title">Get The Latest Deals</h1>
+      <p class="sub-title">$30 coupon for first shopping</p>
+      <div>
+        <input
+          class="input"
+          type="text"
+          placeholder="Enter your email here...."
+        />
+        <button class="primary-btn">Subscribe</button>
+      </div>
+    </section>
   </body>
 </html>
