--- a/index.html/index.html
+++ b/index.html/index.html
@@ -126,5 +126,16 @@
         <button class="primary-btn">Subscribe</button>
       </div>
     </section>
+
+    <!-- footer section -->
+    <footer class="footer">
+      <h1><span>Flower</span>Shop</h1>
+      <p>
+        It is a long established fact that a reader will be distracted by the
+        readable <br />
+        content of a page when looking at its layout.
+      </p>
+      <p class="copy">@2020-2023, FlowerShop.com. All rights reserved.</p>
+    </footer>
   </body>
 </html>
