change image path

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -28,7 +28,7 @@
           <button class="primary-btn">Shop Now</button>
         </div>
         <div class="right-side">
-          <img src="/Flower Asset/pngwing 10.png" alt="" />
+          <img src="../Flower Asset/pngwing 10.png" alt="" />
         </div>
       </div>
     </section>
@@ -85,7 +85,7 @@
           <button class="primary-btn">Sign Up</button>
         </div>
         <div class="right-content">
-          <img src="/Flower Asset/pngwing 8.png" alt="" />
+          <img src="../Flower Asset/pngwing 8.png" alt="" />
         </div>
       </div>
     </section>
